--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "ionic",
   "private": false,
-  "version": "1.0.0-beta.13",
-  "codename": "lanthanum-leopard",
+  "version": "1.0.0-beta.13_1",
+  "codename": "solent-lanthanum-leopard",
   "repository": {
-    "url": "git://github.com/driftyco/ionic.git"
+    "url": "git://github.com/solent/ionic.git"
   },
   "devDependencies": {
     "karma-jasmine": "~0.1.5",
