--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "ionic",
   "private": false,
-  "version": "1.0.0-beta.11",
-  "codename": "indium-iguana",
+  "version": "1.0.0-beta.11_1",
+  "codename": "solent-indium-iguana",
   "repository": {
-    "url": "git://github.com/driftyco/ionic.git"
+    "url": "git://github.com/solent/ionic.git"
   },
   "devDependencies": {
     "karma": "^0.12.16",
